schemaPrefix substitution in expressions and restrictions.